--- a/src/assets/css/style.sass
+++ b/src/assets/css/style.sass
@@ -1,10 +1,10 @@
  /*
- Theme Name: TM WP
+ Theme Name: The architect
  Author: Alexandr Schetinin
- Author URI: https://www.bristl.com
+ Author URI: @thearchitect.digital
  Version: 1.0
  */
-
+@import 'fonts'
 @import 'vars'
 @import 'helpers/smart-grid'
 @import 'helpers/normalize'
@@ -13,7 +13,7 @@
    color: $gray
 
 ::selection
-   background-color: $accent_color
+   background-color: $architect-red
    color: #fff
 
 input, textarea
@@ -24,13 +24,37 @@ input, textarea
       border-color: green
 
 body
-   font-family: $font
+   font-family: $font-text
    font-size: 18px
    min-width: 320px
    position: relative
    line-height: 1.65
    overflow-x: hidden
-   color: $text_color
+   color: $white
+   background: #000
 
 .wrapper
    +wrapper()
+
+.debug-grid
+   +debug(red, blue)
+   z-index: 999
+   opacity: .3
+   display: none
+   @include sm-block()
+      div
+         div
+            div
+               +size-sm(3)
+               &:nth-child(-n+8)
+                  display: none
+   &__active
+      display: block
+
+.overflow-hiden
+   overflow: hidden
+
+.open-popup
+   overflow-y: hidden
+
+@import './blocks/header'
