--- a/src/assets/css/vars.sass
+++ b/src/assets/css/vars.sass
@@ -1,5 +1,18 @@
-$text_color: #333333
-$accent_color: #2F80ED
-$font: 'Arial', sans-serif
+$architect-black: #333333
+$architect-navy: #00284B
+$architect-red: #FF403C
+$text: #273342
+$white: #ffffff
+$font-text: 'Avenir Next', sans-serif
+$font-headline: 'Aeroport', sans-serif
 $gray: #EDEDED
-$gradient: linear-gradient(0deg, #2F80ED, #2F80ED)
+$gradient: linear-gradient(90deg, #F857A6 0%, #FF5858 100%)
+$section-title: 100px $font-headline  
+$h1: 44px $font-headline
+
+$h3: 24px/132% $font-text  
+$h4: 24px/100% $font-text  
+$text: 16px $font-text
+$small-text: 12px $font-text 
+
+$transition: cubic-bezier(0.65, 0, 0.35, 1)   
