--- a/src/assets/css/style.sass
+++ b/src/assets/css/style.sass
@@ -32,14 +32,20 @@ body
    overflow-x: hidden
    color: $white
    background: #000
-
+a
+   font: $text
+   color: $white
+   text-decoration: none
+   transition: all .2s $transition
+   &:hover
+      opacity: .6
 .wrapper
    +wrapper()
 
 .debug-grid
-   +debug(red, blue)
+   +debug(red, 1px solid #fff)
    z-index: 999
-   opacity: .3
+   opacity: .2
    display: none
    @include sm-block()
       div
@@ -57,4 +63,11 @@ body
 .open-popup
    overflow-y: hidden
 
-@import './blocks/header'
+.header
+   position: absolute
+   top: 0
+   margin: 40px 0px
+   z-index: 9999
+   width: 100%
+
+@import './blocks/naviagtion'
