--- a/src/assets/css/blocks/naviagtion.sass
+++ b/src/assets/css/blocks/naviagtion.sass
@@ -145,13 +145,14 @@
    height: $fix100vh
    position: absolute
    width: 100%
-   //top: -100%
-   right: -100%
+   top: -100%
+   //right: -100%
    z-index: 88
    align-items: center
    justify-content: center
    flex-direction: column
    transition: all .7s $transition
+   //display: none
    @media screen and (min-width: 940px)
       display: none
    &_visible
