--- a/src/assets/css/blocks/headline-section.sass
+++ b/src/assets/css/blocks/headline-section.sass
@@ -1,9 +1,9 @@
-
-.lead
+.headline-section
    +row-flex()
    position: relative
-   padding: 250px 0px
+   //height: $fix100vh
    align-items: center
+   padding: 150px 0px
    &__title
       +col()
       +size(8)
@@ -11,34 +11,23 @@
       +shift-xl-left(0)
       //+size-lg(12)
       +size-xl(12)
-      background: linear-gradient(90deg, #F857A6 0%, #FF5858 100%)
-      -webkit-text-fill-color: transparent
-      -webkit-background-clip: text
-      h1
-         font-size: 120px
-         line-height: 104.5%
+      h2
+         font: $section-title
          font-weight: bold
-         font-family: $font-headline
-         +shift-xl-left(0)
-         @include to(1800px)
-            font-size: 100px
-         @include lg-block()
-            font-size: 100px
+         line-height: 96%
          @include md-block()
             font-size: 80px
          @include sm-block()
             font-size: 52px
          @include xs-block()
             font-size: 36px
-            img
-               width: 20px
          @include xxs-block()
             font-size: 28px
    &__picture
       +md(display, none)
       position: absolute
       right: 90px
-      bottom: 10px
+      bottom: 40px
       @include lg-block()
          right: 0px
          width: 350px
