--- a/src/assets/css/vars.sass
+++ b/src/assets/css/vars.sass
@@ -4,15 +4,15 @@ $architect-red: #FF403C
 $text: #273342
 $white: #ffffff
 $font-text: 'Avenir Next', sans-serif
-$font-headline: 'Aeroport', sans-serif
+$font-headline: 'aeroport','Avenir Next', sans-serif
 $gray: #EDEDED
 $gradient: linear-gradient(90deg, #F857A6 0%, #FF5858 100%)
-$section-title: 100px $font-headline  
+$section-title: 90px/96% $font-headline  
 $h1: 44px $font-headline
-$h1-mobile: 32px $font-headline
+$h1-mobile: 28px $font-headline
 $h3: 24px/132% $font-text  
 $h4: 24px/100% $font-text  
 $text: 16px $font-text
 $small-text: 12px $font-text 
 $transition: cubic-bezier(0.65, 0, 0.35, 1)
-$fix100vh: var(--app-height)
+$fix100vh: 100vh
