--- a/src/assets/css/style.sass
+++ b/src/assets/css/style.sass
@@ -101,13 +101,21 @@ a
          font-size: 52px
 
 .button
-
+   padding: 10px
+   background: $architect-black
+   display: inline-block
+   align-items: center
+   justify-content: space-between
+   border-radius: 10px
+   display: inline-flex
+   img
+      margin-left: 10px
+      width: 20px
    &_secondary
       border: 1px solid #FFFFFF
       box-sizing: border-box
-      border-radius: 10px
+      background: transparent
       display: inline-block
-      padding: 10px
 
 @import './blocks/naviagtion'
 @import './blocks/main-slider'
