add mobile project

--- a/src/assets/css/blocks/standard-section.sass
+++ b/src/assets/css/blocks/standard-section.sass
@@ -10,9 +10,10 @@
       +size-xl(10)
       +size-md(12)
       +size-sm(12)
-      background: linear-gradient(90deg, #F857A6 0%, #FF5858 100%)
-      -webkit-text-fill-color: transparent
-      -webkit-background-clip: text
+      h2
+         background: linear-gradient(90deg, #F857A6 0%, #FF5858 100%)
+         -webkit-text-fill-color: transparent
+         -webkit-background-clip: text
 
 .standard-section
    +row-flex()
@@ -20,9 +21,9 @@
       +row-flex()
    &__text
       +col()
+      +size(4)
       +shift-left(1)
       +shift-xl-left(0)
-      +size(4)
       +size-md(12)
       p
          margin: 24px 0px
