--- a/src/assets/css/vars.sass
+++ b/src/assets/css/vars.sass
@@ -9,7 +9,7 @@ $gray: #EDEDED
 $gradient: linear-gradient(90deg, #F857A6 0%, #FF5858 100%)
 $section-title: 90px/96% $font-headline  
 $h1: 44px $font-headline
-$h1-mobile: 28px $font-headline
+$h1-mobile: 32px
 $h3: 24px/132% $font-text  
 $h4: 24px/100% $font-text  
 $text: 16px $font-text
