--- a/src/assets/css/blocks/main-project.sass
+++ b/src/assets/css/blocks/main-project.sass
@@ -1,10 +1,12 @@
 #main-project
    position: relative
+   +md(display, none)
 .main-project-list
    +row-flex()
 .title-section
    &_project
       margin-bottom: 110px
+      +md(margin-bottom, 60px)
 .main-project-list-item
    height: 100vh
    display: flex
@@ -60,3 +62,33 @@
       flex-shrink: 0
       width: 100%
       background-size: cover
+
+// mobile
+.main-project-mobile
+   display: none
+   @include md-block
+      display: block
+
+.main-project-mobile-list-item
+   margin: 50px 0px
+   &:first-child
+      margin: 0px 0px 50px
+   &__img
+
+      img
+         border-radius: 10px
+   &__tag
+      font-size: 16px
+      line-height: 22px
+   &__title
+      font-weight: bold
+      font-size: 28px
+      line-height: 120%
+      margin-bottom: 14px
+
+   &__description
+      font-weight: normal
+      font-size: 14px
+      line-height: 22px
+      margin-bottom: 30px
+   &__button
