--- a/src/assets/css/style.sass
+++ b/src/assets/css/style.sass
@@ -127,3 +127,4 @@ a
 @import './blocks/notification'
 @import './blocks/standard-section'
 @import './blocks/main-project'
+@import './blocks/main-blog'
