update wp and style editor

--- a/src/assets/css/style-editor.sass
+++ b/src/assets/css/style-editor.sass
@@ -1,8 +1,9 @@
 @import 'vars'
 
-body
+.editor-styles-wrapper
    background-color: #000000 !important   
-   font: $font-text  
+   font-family: $font-text  !important
+   color: #fff !important
 
 .wp-block
    max-width: 1140px
