--- a/src/assets/css/vars.sass
+++ b/src/assets/css/vars.sass
@@ -8,10 +8,14 @@ $font-headline: 'aeroport','Avenir Next', sans-serif
 $gray: #EDEDED
 $gradient: linear-gradient(90deg, #F857A6 0%, #FF5858 100%)
 $section-title: 90px/96% $font-headline  
-$h1: 44px $font-headline
+$super-text: bold 200px/96% $font-headline 
+$super-text__mobile: bold 72px/100% $font-headline
+$gigant-text: bold 70px/103% $font-headline 
+$gigant-text__mobile: bold 28px/123% $font-headline 
+$h1: bold 44px $font-headline
 $h1-mobile: 32px
-$h3: 24px/132% $font-text  
-$h4: 24px/100% $font-text  
+$h3: bold 24px/132% $font-text  
+$h4: bold 24px/100% $font-text  
 $text: 16px $font-text
 $small-text: 12px $font-text 
 $transition: cubic-bezier(0.65, 0, 0.35, 1)
