--- a/src/assets/css/blocks/naviagtion.sass
+++ b/src/assets/css/blocks/naviagtion.sass
@@ -29,11 +29,18 @@
    justify-content: center
    +size-xl(8)
    +sm(display, none)
+   
    &__item
       display: flex
       flex-direction: column
       align-items: center
       padding-right: 20px
+      position: relative
+      a
+         position: absolute
+         width: 100%
+         height: 100%
+         top: 0
    &__picture
       width: 44px
       padding: 1px
@@ -55,7 +62,7 @@
       +row-flex
    &__item
       +col()
-      +u-size(1,7,20px)
+      +u-size(1,4,20px)
 
       &_blog
          +u-size(2,7,20px)
