--- a/src/assets/css/blocks/service-section.sass
+++ b/src/assets/css/blocks/service-section.sass
@@ -115,3 +115,72 @@
    div
       &:nth-child(1)
          height: 100%
+
+
+.service-wrapper
+   +col()
+   +size(10)
+   +shift-left(1)
+   +shift-xl-left(0)
+   +size-xl(12)
+   +size-md(12)
+   &__row
+      +row-flex()
+      align-items: stretch
+   &__col
+      +col()
+      +u-size(2, 10, 20px)
+      +size-xl(3)
+      +size-md(6) 
+      +size-sm(12)
+      margin-bottom: 24px
+      display: flex
+.servict-item
+   $border: 6px
+   background: $architect-black
+   padding: 24px 20px
+   border-radius: 10px
+   min-width: 0px
+   position: relative
+   background-clip: padding-box
+   border: solid $border transparent
+   outline-offset: -10px
+   height: auto
+   display: flex
+   flex-direction: column
+   justify-content: space-between         
+   &:before
+      content: ''
+      position: absolute
+      top: 0
+      right: 0
+      bottom: 0
+      left: 0
+      z-index: -1
+      margin: -$border
+      border-radius: inherit
+      background: linear-gradient(206.56deg, #8E54E9 0%, #56B4D3 80.7%)
+      opacity: 0
+      transition: all .3s $transition
+   &:hover:before
+      opacity: 1
+   a
+      position: absolute
+      top: 0
+      right: 0
+      width: 100%
+      height: 100%
+   &__title
+      margin-bottom: 40px
+      font-size: 32px
+      line-height: 44px
+      font-weight: bold
+      font-family: $font-text
+   &__description
+      font: $text
+      margin-bottom: 20px
+   &__icon
+      display: flex
+      justify-content: flex-end
+      img
+         height: 95px
