--- a/src/assets/css/page-service.sass
+++ b/src/assets/css/page-service.sass
@@ -55,3 +55,139 @@
       +size-md(6) 
       +size-sm(12)   
       display: flex
+
+
+.partner
+   +col()
+   +size(12)
+   +size-xl(12)   
+   +shift-xl-left(0)
+   +margin-block()
+   &__title
+
+   &__logos
+      +row-flex()
+.partner-logo
+   +col()
+   +size(2)
+   +size-xl(2)
+   +size-md(6)
+
+
+.quote
+   +col()
+   +size(10)
+   +size-xl(12)
+   +shift-left(0)
+   +shift-xl-left(0)
+   +margin-block
+   &__mark
+
+   &__text
+      margin-bottom: 72px
+      h2
+         -webkit-text-fill-color: transparent
+         -webkit-background-clip: text
+
+   &__persone
+      +row-flex()
+      
+   &__photo
+      +col()
+      +u-size(1, 10, 20px)
+      +size-md(2)
+   &__persone-text      
+      +col
+      +u-size(3, 10, 20px)
+      +size-md(10)
+      display: flex
+      justify-content: center
+      flex-direction: column      
+   &__name
+      font: $h3
+
+   &__job
+      font: $h3
+
+
+.big-form
+   +col()
+   +size(12)
+   background: $architect-black
+   padding: 36px
+   border-radius: 10px
+   display: flex
+   justify-content: space-between
+   align-items: center
+   @include xl-block
+      flex-direction: column
+      justify-content: flex-start
+      align-items: flex-start      
+         
+   &__headline
+      font: $h1
+      flex-basis: 24%
+      @include xl-block
+         margin-bottom: 32px 
+      @include md-block
+         font-size: $h1-mobile   
+   &__form      
+      @include xl-block
+         margin-bottom: 32px
+         width: 100%            
+      input
+         margin-right: 20px
+         @include md-block
+            margin-bottom: 24px
+      input[type="submit"]
+         @include md-block
+            margin: 0px
+   &__persone
+      display: flex
+      align-items: center
+      flex-basis: 20%
+   &__picture
+      width: 80px
+      margin-right: 15px
+   &__contact
+      display: flex
+      flex-direction: column
+
+.phone
+   font: $h3
+   @include md-block
+      font-size: 18px
+
+
+.page-service-content
+   position: relative
+.sticky-form
+   position: absolute
+   top: 20px
+   width: 100%
+   pointer-events: none
+   .wrapper
+
+      .row
+         justify-content: flex-end
+
+
+.card-form
+   pointer-events: auto
+   +col()
+   +size(3)
+   padding: 60px 48px
+   background: $architect-black
+   border-radius: 10px
+   &__title
+
+   &__persone
+
+
+   &__phone
+
+
+   &__mail
+
+
+
