--- a/src/assets/css/style.sass
+++ b/src/assets/css/style.sass
@@ -102,7 +102,7 @@ a
 .title-section
    h2
       font-family: $font-headline
-      font-size: 90px
+      font-size: 100px
       line-height: 96%
       font-weight: bold
       margin: 1rem 0
@@ -145,8 +145,7 @@ a
    color: #000    
    margin: 16px 0px
 
-.wpcf7
-   width: 100%
+.wpcf7   
 .wpcf7-form
    position: relative
    p
@@ -164,12 +163,14 @@ a
       border: none
       outline: none
       height: 48px
-      padding-left: 14px
+      padding-left: 14px;      
+      color: #ffffff;
+      
+      //max-width: 100%;      
       color: $white
       &::placeholder
          font: $text
-         color: #BDBDBD
-         // padding: 14px
+         color: #BDBDBD         
          @include sm-block
             color: #4F4F4F
       @include md-block
@@ -190,6 +191,7 @@ a
       cursor: pointer
       position: relative
       height: 48px
+      max-width: 100%
       @include md-block
          border-radius: 10px
          width: 100%
@@ -198,14 +200,6 @@ a
          margin: 1rem 0
       &:hover
          background: $architect-red
-      &::after
-         content: '🤟🏻'
-         position: absolute
-         width: 24px
-         height: 24px
-         right: 0px
-         top: 0px
-         z-index: 999
    .ajax-loader
       display: none !important
    .wpcf7-validation-errors
@@ -216,6 +210,7 @@ a
     color: $architect-red;
     font-size: 12px
     display: none
+
    .wpcf7-mail-sent-ok
       position: absolute
       top: 0px
@@ -278,11 +273,12 @@ a
    box-shadow: inset 0px 0px 0px 2px $architect-red
 
 
-.vertical-form   
-   .wpcf7-form
+.vertical-form      
+   .wpcf7-form      
       p
-         flex-direction: column
-
+         flex-direction: column         
+      input:not([type="submit"])
+         width: calc( 100% - 14px  )
 
 footer
    margin: 24px 0px
