--- a/src/assets/css/page-project.sass
+++ b/src/assets/css/page-project.sass
@@ -17,6 +17,13 @@
 		height: 100%
 		top: 0
 		z-index: 9
+	&__overlay
+		position: absolute
+		width: 100%
+		height: 100%
+		top: 0
+		background-color: #000000
+		opacity: 0.2		
 	&__content
 		display: flex
 		flex-direction: column
