--- a/src/assets/css/single-project.sass
+++ b/src/assets/css/single-project.sass
@@ -4,6 +4,12 @@
    background-position: center center
    background-repeat: no-repeat
    background-size: cover
+   &__overlay
+      position: absolute
+      width: 100%
+      height: 100%
+      background-color: #000
+      opacity: 0.5
    &__content
       position: absolute
       width: 100%
