change offset block

--- a/src/assets/css/blocks/main-project.sass
+++ b/src/assets/css/blocks/main-project.sass
@@ -5,7 +5,7 @@
    +row-flex()
 .title-section
    &_project
-      margin-bottom: 110px
+      margin-bottom: $offset-block / 2
       +md(margin-bottom, 60px)
 .main-project-list-item
    height: 100vh
