--- a/src/assets/css/blocks/main-slider.sass
+++ b/src/assets/css/blocks/main-slider.sass
@@ -2,6 +2,7 @@
 
    &__item
       height: $fix100vh
+      min-height: 650px
       background-repeat: no-repeat
       background-size: cover
       background-position: center center
