--- a/src/assets/css/blocks/service-section.sass
+++ b/src/assets/css/blocks/service-section.sass
@@ -3,7 +3,7 @@
    &__title
       +row-flex()
       align-items: baseline
-      margin-bottom: 3rem
+      margin-bottom: $offset-block / 2 
    &__button
       +col()
       +size(2)
