--- a/src/assets/css/page-service.sass
+++ b/src/assets/css/page-service.sass
@@ -1,6 +1,7 @@
 .service-header
    padding: 228px 0px 120px 0px
    z-index: 1
+   margin-bottom: $offset-block / 2 
    &__row
       +row-flex()
    &__content
@@ -38,8 +39,7 @@
          margin-bottom: 0px
 
 
-.more-service   
-   +margin-block()
+.more-service      
    .title-section
       +col()
       +size(8)
@@ -61,8 +61,7 @@
    +col()
    +size(12)
    +size-xl(12)   
-   +shift-xl-left(0)
-   +margin-block()
+   +shift-xl-left(0)   
    &__title
 
    &__logos
@@ -79,8 +78,7 @@
    +size(10)
    +size-xl(12)
    +shift-left(0)
-   +shift-xl-left(0)
-   +margin-block
+   +shift-xl-left(0)   
    &__mark
 
    &__text
