--- a/src/assets/gblocks/analyzing/analyzing.sass
+++ b/src/assets/gblocks/analyzing/analyzing.sass
@@ -16,7 +16,9 @@
    &__items
 
 .analyzing-item
-   margin-bottom: 100px
+   margin-bottom: 82px
+   &:last-of-type
+      margin-bottom: 0px
    h3
       font: $h1
       margin-bottom: 24px
